Conform to JDK22 (#3)