@@ -5,7 +5,7 @@
 
     <groupId>com.yasuenag</groupId>
     <artifactId>runobjfile</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1</version>
     <packaging>jar</packaging>
 
     <name>runobjfile</name>
@@ -14,8 +14,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mainClass>com.yasuenag.garakuta.ffm.objfile.RunObjFile</mainClass>
         <imageName>${project.artifactId}-${project.version}</imageName>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -39,6 +39,37 @@
                     <enablePreview>true</enablePreview>
                     <debug>true</debug>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>${mainClass}</mainClass>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>dependency</classpathPrefix>
+                        </manifest>
+                        <manifestEntries>
+                            <Enable-Native-Access>ALL-UNNAMED</Enable-Native-Access>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.6.1</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -70,13 +101,10 @@
                         </goals>
                         <configuration>
                             <executable>${java.home}/bin/java</executable>
-                            <workingDirectory>${project.build.directory}</workingDirectory>
                             <arguments>
-                                <argument>-classpath</argument>
-                                <classpath/>
                                 <argument>--enable-preview</argument>
-                                <argument>--enable-native-access=ALL-UNNAMED</argument>
-                                <argument>${mainClass}</argument>
+                                <argument>-jar</argument>
+                                <argument>${project.build.directory}/${imageName}.jar</argument>
                                 <argument>${project.build.directory}/test.o</argument>
                                 <argument>mul2</argument>
                                 <!-- <argument>mul3</argument> -->
